--- a/NFE-backend/package.json
+++ b/NFE-backend/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.2.1",
     "googleapis": "^73.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.9",
     "nodemailer": "^6.6.0"
   },
